# rcloud

./: .editorconfig  .gitignore  .lintr  Dockerfile  Makefile  Makefile.am  NEWS.md  README-dev.md  README.md  build.zig  build.zig.zon  compose.yaml  configure  configure.ac  debian.Dockerfile  docker.Makefile  flake.nix  shell.nix
build-aux/: check_hash.zig  config.json  download_file.zig  hash_file.zig  update_deps.zig
conf/: rcloud-qap.conf.docker  rcloud.conf.docker  rcloud.dev.conf  rserve-proxified.conf  scripts.conf  start2
docker/: buildContainer.sh  qap.yaml
docker/common/: Dockerfile  Makefile  backup.sh  build.sh  restore.sh
docker/dev/: README.md  apt-install.txt  compose.yaml  rserve.conf
docker/prod/: README.md
docker/stage/: README.md  apt-install.txt  compose.yaml
htdocs/: login.R
rcloud.support/: DESCRIPTION
rcloud.support/R/: credentials.R  http.R  setup.R
scripts/: devcontainer.sh  r-cmd-install.sh  zig-build-dist-fat.sh
